--- a/style.css
+++ b/style.css
@@ -14,17 +14,49 @@ body {
 }
 #tbltombola {
   border-collapse: collapse;
-  height: 25rem;
-  width: 25rem;
+  height: 20rem;
+  width: 20rem;
   text-align: center;
   font-size: 23pt;
   cursor: pointer;
 }
+#tbltombola td {
+  padding: 0.3rem;
+}
+.celle-formato {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20%;
+  border: 0.5px solid gray;
+}
+.celle-formato:hover {
+  background-color: gray;
+}
+.lettere {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tbllettere {
+  padding: 0 1.3rem;
+  font: 40pt;
+  display: none;
+}
+.linea-check {
+  text-decoration: line-through;
+  color: red;
+  font-size: 20pt;
+  pointer-events: none;
+}
+/* 
 #tombola {
   display: flex;
   flex-wrap: wrap;
   max-width: 400px;
-}
+} 
 
 .cella {
   width: 40px;
@@ -33,7 +65,7 @@ body {
   border: 1px solid #ddd;
   margin: 2px;
   line-height: 40px;
-}
+} */
 
 button {
   font-size: 16px;
